gts-macros/tests/compile_fail/missing_properties.stderr
error: unexpected end of input, Missing required attribute: properties
 --> tests/compile_fail/missing_properties.rs:5:1
  |
5 | / #[struct_to_gts_schema(
6 | |     file_path = "schemas/user.v1~.schema.json",
7 | |     schema_id = "gts.x.app.entities.user.v1~",
8 | |     description = "User entity"
9 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
